[gd_scene load_steps=11 format=3 uid="uid://di67yfisnimo0"]

[ext_resource type="Script" path="res://scenes/mafia_enforcer_7.gd" id="1_7xwr7"]
[ext_resource type="Texture2D" uid="uid://cuvv6ym440jra" path="res://assets/Enemies/MafiaEnforcer7/SimpleEnemy7Death.png" id="2_0wymi"]
[ext_resource type="Texture2D" uid="uid://cfhr8gpb3m3ei" path="res://assets/Enemies/MafiaEnforcer7/SimpleEnemy7Idle.png" id="3_wy4wx"]
[ext_resource type="Texture2D" uid="uid://djtp2j2mhsju4" path="res://assets/Enemies/MafiaEnforcer7/SimpleEnemy7Run.png" id="4_15uxa"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xijy1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0wymi")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wy4wx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_15uxa")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l1uqn"]
radius = 25.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drwi2"]
size = Vector2(50, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_0n27h"]
radius = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h74u3"]
bg_color = Color(0, 0, 0, 0.65098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mk4m2"]
bg_color = Color(0.905254, 0, 0.0149213, 1)

[node name="MafiaEnforcer7" type="CharacterBody2D" groups=["enemies", "mafia_enforcer_7", "minimap_objects"]]
process_mode = 1
z_index = 3
collision_layer = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_7xwr7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 3
position = Vector2(-1.52588e-05, -1.52588e-05)
scale = Vector2(0.0625, 0.0625)
sprite_frames = SubResource("SpriteFrames_xijy1")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 3
shape = SubResource("CircleShape2D_l1uqn")

[node name="EntranceTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SpeedChangeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
z_index = 3
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 3
shape = SubResource("RectangleShape2D_drwi2")

[node name="OutOfBoundsChecker" type="Area2D" parent="." groups=["out_of_bounds_checker"]]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBoundsChecker"]
shape = SubResource("CircleShape2D_0n27h")

[node name="EnemyHealthBar" type="ProgressBar" parent="."]
z_index = 3
offset_left = -38.0
offset_top = -48.0
offset_right = 38.0
offset_bottom = -33.0
theme_override_styles/background = SubResource("StyleBoxFlat_h74u3")
theme_override_styles/fill = SubResource("StyleBoxFlat_mk4m2")
value = 100.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_path_custom_line_width = 1.0

[node name="TrackTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="SummonCheckTimer" type="Timer" parent="."]
autostart = true

[node name="SummonTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="EntranceTimer" to="." method="_on_entrance_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="TrackTimer" to="." method="_on_track_timer_timeout"]
[connection signal="timeout" from="SummonCheckTimer" to="." method="_on_summon_check_timer_timeout"]
[connection signal="timeout" from="SummonTimer" to="." method="_on_summon_timer_timeout"]
